# financial-rag-agent

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  Dockerfile  README-HELM.md  README.md  alembic.ini  combine_files.py  custom-values.yaml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run_test.py  setup.py  test_foundation.py  test_multi_agency.py  test_multi_modal.py  test_predictive_analysis.py  test_production.py  test_real_time.py  workflow.sh
.github/workflows/: ci-cd.yml  ci.yml  release.yml  security-scan.yml
full production hardening phase/: .gitleaks.toml  .pre-commit-config.yaml  agent-l7-policy.yaml  api-l7-policy.yaml  apps-appset.yaml  authorization-policies.yaml  bootstrap-argocd.sh  cilium-servicemonitor.yaml  conftest.toml  default-deny.yaml  destination-rules.yaml  ec2nodeclass-default.yaml  env-appset.yaml  falco-helm-values.yaml  falco-rules-configmap.yaml  falco.yaml  falcosidekick-values.yaml  financial-rag-alerts.yaml  financial-rag-project.yaml  financial_rag_rules.yaml  gateway.yaml  gitleaks-workflow.yml  helm_policy.rego  hubble-config.yaml  infra-appset.yaml  ingestion-policy.yaml  jaeger-install.yaml  k8s_admission.rego  k8s_admission_test.rego  kustomization.yaml  namespace-label.yaml  nodepool-application.yaml  nodepool-ingestion.yaml  nodepool-spot.yaml  peer-auth-strict-mtls.yaml  pgvector-policy.yaml  redis-policy.yaml  slo-alerts.yaml  slo-rules.yaml  templates.yaml  (+5 more)
helm/: .helmignore  Chart.yaml  create-helm-structure.sh  values-development.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/charts/vector-store/: Chart.yaml  values.yaml
helm/charts/vector-store/templates/: _helpers.tpl  pvc.yaml  (+2 more)
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secret.yaml  service-monitor.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml  test-health.yaml
infrastructure/docker/: Dockerfile  clean-dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start-dev.sh  stop-dev.sh
infrastructure/docker/init/: 01_create_schema.sql  create_hnsw_index.sql  create_schema.sql
infrastructure/docker/prometheus/: prometheus.yml
infrastructure/helm/: Chart.yaml  values.prod.yaml  values.yaml
infrastructure/helm/templates/: COMMIT_24.md  NOTES.txt  _helpers.tpl  agent-deployment.yaml  agent-hpa.yaml  api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  ingestion-cronjob.yaml  namespace.yaml  pgvector-statefulset.yaml  redis-statefulset.yaml  servicemonitor.yaml
infrastructure/terraform/: README.md  alb-controller-policy.json  env.hcl  main.tf  outputs.tf  terragrunt.hcl  variables.tf
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  persistent-volume-claim.yaml  secret.yaml  service.yaml
migrations/versions/: 001_initial_migration.py
policies/rego/: vault_policy.rego
policies/test_fixtures/: test-policy.json
scripts/: backup-manager.py  cleanup.sh  deploy-helm.sh  deploy.sh  health-check.sh  run_performance_tests.sh  run_tests.sh  scaffold.sh  start.sh  start_api.py  stop.sh  test-image.sh  test.env  test_production.py
src/financial_rag/: __init__.py
src/financial_rag/agents/: __init__.py  coordinator.py  financial_agent.py  multi_modal_analyst.py  predictive_analyst.py  real_time_analyst.py  specialized_agents.py
src/financial_rag/analytics/: forecasting.py
src/financial_rag/api/: __init__.py  dependencies.py  middleware.py  models.py  routes.py  server.py
src/financial_rag/config/: __init__.py  advanced.py  base.py  config.py  settings.py
src/financial_rag/ingestion/: __init__.py  document_processor.py  sec_ingestor.py  yfinance_ingestor.py
src/financial_rag/monitoring/: __init__.py  metrics.py  tracing.py
src/financial_rag/processing/: __init__.py  audio_processor.py  document_understanding.py  text_processor.py
src/financial_rag/retrieval/: __init__.py  document_retriever.py  embeddings.py  hybrid_search.py  query_engine.py  vector_store.py
src/financial_rag/storage/: __init__.py  cache.py  database.py  vector_store.py
src/financial_rag/utils/: exceptions.py
terraform/: README.md  create-terraform-structure.sh  main.tf  outputs.tf  providers.tf  terraform-tfvars  variables.tf  versions.tf
terraform/environments/dev/: main.tf
terraform/environments/prod/: main.tf
terraform/modules/database/: main.tf
terraform/modules/kubernetes/: main.tf
terraform/modules/networking/: main.tf
terraform/scripts/: deploy-env.sh  init-backend.sh
tests/: conftest.py  create-tests-structure.sh  pytest.ini  requirements-test.txt
tests/e2e/: test_full_workflow.py
tests/integration/: test_agent.py  test_agent_coordination.py  test_api.py  test_database_integration.py  test_foundation.py  test_ingestion.py  test_processing.py
tests/performance/: test_rag_performance.py
tests/performance/load_tests/: locustfile.py
tests/test_utils/: data_generators.py
tests/unit/: test_agents.py  test_api.py  test_config.py  test_data_ingestion.py  test_ingestion.py  test_rag_engine.py  test_retrieval.py
tutorial/: phase1.md  phase1.srt  phase11-12-tutorial.md  phase2-3-tutorial.md  phase4-5-tutorial.md  phase6-7-tutorial.md  phase8-tutorial.md  phase9-10-tutorial.md
tutorial/Audio/FinOps/: phase1.srt  phase10.srt  phase11.srt  phase2.srt  phase3.srt  phase4.srt  phase5.srt  phase6.srt  phase7.srt  phase8.srt  phase9.srt
tutorial/Audio/Financial rag agent/: phase1.srt  phase10.srt  phase11.srt  phase12.srt  phase2.srt  phase3.srt  phase4.srt  phase5.srt  phase6.srt  phase7.srt  phase8.srt  phase9.srt
tutorial/Audio/SOC/: phase1.srt  phase2.srt  phase3.srt  phase4.srt  phase5.srt  phase6.srt  phase7.srt
tutorial/phase 1/: content.md  introduction.md  module2.md  module3.md  module4.md  module5.md
tutorial/phase 2/: module1.md  module2.md  module3.md  module4.md  module5.md  module6.md
tutorial/phase 3/: module1.md  module2.md  module3.md  module4.md
(+51 files in other folders)
