[project]
name = "financial-rag-agent"
version = "0.1.0"
description = "Enterprise Financial RAG Analyst Agent"
authors = [
    {name = "AI Engineer", email = "ai@company.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.2",
    "openai>=1.3.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pdfplumber>=0.10.0",
    "sec-edgar-downloader>=4.1.2",
    "yfinance>=0.2.18",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "pytest>=7.4.0",
    "loguru>=0.7.2",
    "wandb>=0.15.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "wandb>=0.15.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "aiohttp>=3.8.0",
    "websockets>=12.0",
    "yfinance>=0.2.18",
    "openai-whisper>=20231117",
    "camelot-py[base]>=0.11.0",
    "pdfplumber>=0.10.0",
    "opencv-python>=4.8.0",
    "textblob>=0.17.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"

[project.scripts]
financial-rag-api = "financial_rag.api.server:main"