[project]
name = "financial-rag-agent"
version = "0.1.0"
description = "Enterprise Financial RAG Analyst Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "AI Engineer", email = "ai@company.com"},
]
dependencies = [
    # Core RAG
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.2",
    "openai>=1.3.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    
    # Financial Data
    "yfinance>=0.2.18",
    "sec-edgar-downloader>=4.1.2",
    
    # PDF/Document Processing
    "pdfplumber>=0.10.0",
    "camelot-py[base]>=0.11.0",
    
    # API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "websockets>=12.0",
    
    # ML/AI
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "opencv-python>=4.8.0",
    "textblob>=0.17.1",
    
    # Monitoring
    "loguru>=0.7.2",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"

[project.scripts]
financial-rag-api = "financial_rag.api.server:main"