# =============================================================================
# Financial RAG Agent — Project Configuration
# =============================================================================

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "financial-rag-agent"
version     = "0.1.0"
description = "Production-grade financial RAG pipeline"
readme      = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AI Engineer", email = "ai@company.com" },
]

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # LLM + Embeddings
    "openai>=1.35.0",
    "tiktoken>=0.7.0",

    # Ingestion
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "yfinance>=0.2.40",
    "sec-edgar-downloader>=5.0.0",

    # Processing
    "pdfplumber>=0.11.0",

    # Observability
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    # Type checking
    "mypy>=1.10.0",
    # Linting / formatting
    "ruff>=0.4.0",
    # Pre-commit
    "pre-commit>=3.7.0",
    # Migrations
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.scripts]
financial-rag = "financial_rag.api.server:main"

# =============================================================================
# Hatchling — tell it where the package lives
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/financial_rag"]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode  = "auto"
testpaths     = ["tests"]
pythonpath    = ["src"]          # ← this is what was missing
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --strict-markers -p no:warnings"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require running services)",
    "slow: Slow tests",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit   = ["*/tests/*", "*/__version__.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# =============================================================================
# Ruff — replaces black + isort + flake8
# =============================================================================
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"src/financial_rag/storage/repositories/*.py" = ["TCH002", "TCH003"]
"src/financial_rag/api/*.py" = ["TCH001", "TCH002", "TCH003"]
"src/financial_rag/agents/*.py" = ["SIM108", "TCH001", "TCH002", "TCH003"]
"tests/**/*.py" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["financial_rag"]

# =============================================================================
# Mypy
# =============================================================================
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
exclude                = ["^tests/", "^tests\\\\", "migrations/"]

[[tool.mypy.overrides]]
module = "financial_rag.agents.*"
ignore_errors = true

# ── Per-module overrides ──────────────────────────────────────────────────────
# pydantic-settings BaseSettings subclassing and computed_field @property
# stacking are unsupported patterns in mypy strict mode — library limitation.
[[tool.mypy.overrides]]
module = "financial_rag.config.*"
ignore_errors = true

# redis.asyncio has no type stubs — types-redis covers sync API only.
# Suppress import-untyped and the unused-ignore that results from it.
[[tool.mypy.overrides]]
module = "financial_rag.storage.cache"
ignore_errors = true

[[tool.mypy.overrides]]
module = "financial_rag.api.*"
ignore_errors = true

# SQLAlchemy pool.size(), checkedout(), overflow() exist at runtime
# but are not reflected in SQLAlchemy's published type stubs.
[[tool.mypy.overrides]]
module = "financial_rag.storage.database"
ignore_errors = true

# SQLAlchemy repositories: order_by column expressions, generic ModelT
# return types, and rowcount attribute are not fully typed in SA stubs.
[[tool.mypy.overrides]]
module = "financial_rag.storage.repositories.*"
ignore_errors = true

# tenacity @retry strips decorated method return types, causing
# cascading no-any-return and misc errors throughout the ingestor.
[[tool.mypy.overrides]]
module = "financial_rag.ingestion.sec_ingestor"
ignore_errors = true

# Retrieval: OpenAI and sentence-transformers lack complete stubs.
# tenacity @retry on embed methods strips return types.
[[tool.mypy.overrides]]
module = "financial_rag.retrieval.*"
ignore_errors = true

# Vector store orchestrates multiple untyped libraries.
[[tool.mypy.overrides]]
module = "financial_rag.storage.vector_store"
ignore_errors = true

# API layer: FastAPI Depends() annotated types must remain as runtime
# imports — moving to TYPE_CHECKING breaks dependency injection.
[[tool.mypy.overrides]]
module = "financial_rag.api.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

